Add event level metrics

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -363,22 +363,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Reading data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validation = MCValidation(\"validation.root\", \"mc\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -391,7 +375,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inclusive particle metrics"
+    "# MC validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation = MCValidation(\"validation.root\", \"mc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inclusive particle metrics"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Particle metrics by interaction type (CC)"
+    "## Particle metrics by interaction type (CC)"
    ]
   },
   {
@@ -449,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Particle metrics by interaction type (NC)"
+    "## Particle metrics by interaction type (NC)"
    ]
   },
   {
@@ -476,6 +476,186 @@
     "            make_completeness_plots(pdg, completeness_array, mc_nhits, mc_mom, f\"nc{int_type}_completeness_{pdg}\")\n",
     "            make_purity_plots(pdg, purity_array, mc_nhits, mc_mom, f\"nc{int_type}_purity_{pdg}\")\n",
     "            make_efficiency_plots(pdg, efficiency_array, mc_nhits, mc_mom, f\"nc{int_type}_efficiency_{pdg}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Event validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EventValidation:\n",
+    "    def __init__(self, filename, treename):\n",
+    "        file = uproot.open(filename)\n",
+    "        tree = file[treename]\n",
+    "        self.event = tree['event'].array(library=\"np\") #linear list of events\n",
+    "        self.orig_event = tree[\"event\"].array(library=\"np\") #actual event number\n",
+    "        self.file = np.zeros_like(self.event)\n",
+    "        self.is_cc = tree[\"isCC\"].array(library=\"np\")\n",
+    "        self.is_qe = tree[\"isQE\"].array(library=\"np\")\n",
+    "        self.is_res = tree[\"isResonant\"].array(library=\"np\")\n",
+    "        self.is_dis = tree[\"isDIS\"].array(library=\"np\")\n",
+    "        self.is_coh = tree[\"isCoherent\"].array(library=\"np\")\n",
+    "        self.is_numu = tree[\"isNuMu\"].array(library=\"np\")\n",
+    "        self.is_nue = tree[\"isNuE\"].array(library=\"np\")\n",
+    "        self.n_pizero = tree[\"nPiZero\"].array(library=\"np\")\n",
+    "        self.n_pic = tree[\"nPiMinus\"].array(library=\"np\") + tree[\"nPiPlus\"].array(library=\"np\")\n",
+    "        self.n_photons = tree[\"nPhotons\"].array(library=\"np\")\n",
+    "        self.n_protons = tree[\"nProtons\"].array(library=\"np\")\n",
+    "        self.is_fiducial = tree[\"isFiducial\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dx = tree[\"vtxDx\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dy = tree[\"vtxDy\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dz = tree[\"vtxDr\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dr = tree[\"vtxDz\"].array(library=\"np\")\n",
+    "        self.n_good_matches = tree[\"nGoodMatches\"].array(library=\"np\")\n",
+    "        self.n_poor_matches = tree[\"nPoorMatches\"].array(library=\"np\")\n",
+    "        self.n_unmatched = tree[\"nUnmatched\"].array(library=\"np\")\n",
+    "        self.n_nodes = tree[\"nNodes\"].array(library=\"np\")\n",
+    "        self.n_good_tier1_matches = tree[\"nGoodTier1Matches\"].array(library=\"np\")\n",
+    "        self.n_tier1_nodes = tree[\"nTier1Nodes\"].array(library=\"np\")\n",
+    "        self.n_good_track_matches = tree[\"nGoodTrackMatches\"].array(library=\"np\")\n",
+    "        self.n_track_nodes = tree[\"nTrackNodes\"].array(library=\"np\")\n",
+    "        self.n_good_shower_matches = tree[\"nGoodShowerMatches\"].array(library=\"np\")\n",
+    "        self.n_shower_nodes = tree[\"nShowerNodes\"].array(library=\"np\")\n",
+    "        self.n_good_tier1_track_matches = tree[\"nGoodTier1TrackMatches\"].array(library=\"np\")\n",
+    "        self.n_track_tier1_nodes = tree[\"nTier1TrackNodes\"].array(library=\"np\")\n",
+    "        self.n_good_tier1_shower_matches = tree[\"nGoodTier1ShowerMatches\"].array(library=\"np\")\n",
+    "        self.n_tier1_shower_nodes = tree[\"nTier1ShowerNodes\"].array(library=\"np\")\n",
+    "        \n",
+    "        self.has_leading_muon = tree[\"hasLeadingMuon\"].array(library=\"np\")\n",
+    "        self.has_leading_electron = tree[\"hasLeadingElectron\"].array(library=\"np\")\n",
+    "        self.is_leading_lepton_correct = tree[\"isLeadingLeptonCorrect\"].array(library=\"np\")\n",
+    "        file.close()\n",
+    "        make_sequential(self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation = EventValidation(\"validation_event.root\", \"event\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_histogram_2d(x, y, plot_format):\n",
+    "    plt.rcParams[\"figure.figsize\"] = (20, 15)\n",
+    "    fig, ax = plt.subplots()\n",
+    "    \n",
+    "    ax.set_title(plot_format.title, fontsize=plot_format.titlesize)\n",
+    "    ax.tick_params(axis='x', labelsize=plot_format.labelsize)\n",
+    "    ax.tick_params(axis='y', labelsize=plot_format.labelsize)\n",
+    "    ax.set_xlabel(plot_format.xlabel, fontsize=plot_format.titlesize)\n",
+    "    ax.set_ylabel(plot_format.ylabel, fontsize=plot_format.titlesize)\n",
+    "    if not plot_format.xlim is None:\n",
+    "        plt.xlim(plot_format.xlim[0], plot_format.xlim[1])\n",
+    "    if not plot_format.ylim is None:\n",
+    "        plt.ylim(plot_format.ylim[0], plot_format.ylim[1])\n",
+    "        \n",
+    "    bins = np.linspace(0, np.max(x), np.max(x) + 1)\n",
+    "    hist, *_ = np.histogram2d(x, y, bins=(bins, bins))\n",
+    "    for i in range(len(hist)):\n",
+    "        row_sum = hist[i].sum()\n",
+    "        hist[i] *= 1 / row_sum if row_sum > 0 else 1\n",
+    "    hist = hist.T\n",
+    "\n",
+    "    cmap = plt.cm.get_cmap('coolwarm')\n",
+    "    plt.pcolormesh(bins, bins, hist, cmap=cmap, vmin=0, vmax=1)\n",
+    "    plt.colorbar()\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    save_plot(fig, plot_format.filename)\n",
+    "    \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inclusive event metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "plot_format = PlotFormat(title=\"Event Particle Fraction - Inclusive\", xlabel=\"true nodes\", ylabel=\"reconstructed nodes\",\n",
+    "                         filename=f\"inc_particle_frac\")\n",
+    "plot_histogram_2d(validation.n_nodes, validation.n_good_matches, plot_format)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Event metrics by interaction type (CC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for int_type in [\"qe\", \"res\", \"dis\", \"coh\"]:\n",
+    "    if int_type == \"qe\": type_target = validation.is_qe == True\n",
+    "    elif int_type == \"res\": type_target = validation.is_res == True\n",
+    "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
+    "    elif int_type == \"coh\": type_target = validation.is_coh == True\n",
+    "    type_match = type_target & (validation.is_cc == True)\n",
+    "    idx = np.where(type_match)\n",
+    "    if len(idx[0]) > 0:\n",
+    "        plot_format = PlotFormat(title=f\"Event Particle Fraction - CC{int_type.upper()}\", xlabel=\"true nodes\",\n",
+    "                                 ylabel=\"reconstructed nodes\", filename=f\"cc{int_type}_particle_frac\")\n",
+    "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Event metrics by interaction type (NC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for int_type in [\"qe\", \"res\", \"dis\", \"coh\"]:\n",
+    "    if int_type == \"qe\": type_target = validation.is_qe == True\n",
+    "    elif int_type == \"res\": type_target = validation.is_res == True\n",
+    "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
+    "    elif int_type == \"coh\": type_target = validation.is_coh == True\n",
+    "    type_match = type_target & (validation.is_cc == False)\n",
+    "    idx = np.where(type_match)\n",
+    "    if len(idx[0]) > 0:\n",
+    "        plot_format = PlotFormat(title=f\"Event Particle Fraction - NC{int_type.upper()}\", xlabel=\"true nodes\", ylabel=\"reconstructed nodes\",\n",
+    "                                 filename=f\"nc{int_type}_particle_frac\")\n",
+    "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)"
    ]
   },
   {
