Add correct event fractions

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -603,6 +603,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "efficiency_array = np.array(validation.n_nodes == validation.n_good_matches)\n",
+    "bins = np.linspace(0, np.max(validation.n_protons), 1 + np.max(validation.n_protons))\n",
+    "plot_format = PlotFormat(title=\"Correct Event Fraction - Inclusive\", xlabel=\"n protons\", ylabel=\"correct event fraction\",\n",
+    "                         xlim=(0, np.max(validation.n_protons)), ylim=(0, 1.01),\n",
+    "                         filename=f\"inc_correct_event_fraction\")\n",
+    "metric = get_efficiency(efficiency_array, validation.n_protons, bins)\n",
+    "plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -617,7 +632,7 @@
    },
    "outputs": [],
    "source": [
-    "for int_type in [\"qe\", \"res\", \"dis\", \"coh\"]:\n",
+    "for int_type in [\"qe\", \"res\", \"dis\"]:\n",
     "    if int_type == \"qe\": type_target = validation.is_qe == True\n",
     "    elif int_type == \"res\": type_target = validation.is_res == True\n",
     "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
@@ -627,7 +642,15 @@
     "    if len(idx[0]) > 0:\n",
     "        plot_format = PlotFormat(title=f\"Event Particle Fraction - CC{int_type.upper()}\", xlabel=\"true nodes\",\n",
     "                                 ylabel=\"reconstructed nodes\", filename=f\"cc{int_type}_particle_frac\")\n",
-    "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)"
+    "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)\n",
+    "\n",
+    "        efficiency_array = np.array(validation.n_nodes[idx] == validation.n_good_matches[idx])\n",
+    "        bins = np.linspace(0, np.max(validation.n_protons[idx]), 1 + np.max(validation.n_protons[idx]))\n",
+    "        plot_format = PlotFormat(title=f\"Correct Event Fraction - CC{int_type.upper()}\", xlabel=\"n protons\", ylabel=\"correct event fraction\",\n",
+    "                                 xlim=(0, np.max(validation.n_protons[idx])), ylim=(0, 1.01),\n",
+    "                                 filename=f\"cc{int_type}_correct_event_fraction\")\n",
+    "        metric = get_efficiency(efficiency_array, validation.n_protons[idx], bins)\n",
+    "        plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")"
    ]
   },
   {
@@ -645,7 +668,7 @@
    },
    "outputs": [],
    "source": [
-    "for int_type in [\"qe\", \"res\", \"dis\", \"coh\"]:\n",
+    "for int_type in [\"qe\", \"res\", \"dis\"]:\n",
     "    if int_type == \"qe\": type_target = validation.is_qe == True\n",
     "    elif int_type == \"res\": type_target = validation.is_res == True\n",
     "    elif int_type == \"dis\": type_target = validation.is_dis == True\n",
@@ -655,7 +678,15 @@
     "    if len(idx[0]) > 0:\n",
     "        plot_format = PlotFormat(title=f\"Event Particle Fraction - NC{int_type.upper()}\", xlabel=\"true nodes\", ylabel=\"reconstructed nodes\",\n",
     "                                 filename=f\"nc{int_type}_particle_frac\")\n",
-    "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)"
+    "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)\n",
+    "        \n",
+    "        efficiency_array = np.array(validation.n_nodes[idx] == validation.n_good_matches[idx])\n",
+    "        bins = np.linspace(0, np.max(validation.n_protons[idx]), 1 + np.max(validation.n_protons[idx]))\n",
+    "        plot_format = PlotFormat(title=f\"Correct Event Fraction - NC{int_type.upper()}\", xlabel=\"n protons\", ylabel=\"correct event fraction\",\n",
+    "                                 xlim=(0, np.max(validation.n_protons[idx])), ylim=(0, 1.01),\n",
+    "                                 filename=f\"nc{int_type}_correct_event_fraction\")\n",
+    "        metric = get_efficiency(efficiency_array, validation.n_protons[idx], bins)\n",
+    "        plot_metric(metric.x, metric.y, metric.y_errs, plot_format, \"efficiency\")"
    ]
   },
   {
