Remove random sampling

--- a/validation/metrics_plots_compare.ipynb
+++ b/validation/metrics_plots_compare.ipynb
@@ -52,60 +52,54 @@
     "    def __init__(self, filename, treename):\n",
     "        file = uproot.open(filename)\n",
     "        tree = file[treename]\n",
-    "        events = tree['event'].array(library=\"np\") \n",
-    "        \n",
-    "        choices = np.random.choice([False, True], len(events))\n",
-    "        ridx = np.where(choices)\n",
-    "        self.event = tree['event'].array(library=\"np\")[ridx] #linear list of events\n",
-    "        \n",
-    "        self.orig_event = tree[\"event\"].array(library=\"np\")[ridx] #actual event number\n",
+    "        self.event = tree['event'].array(library=\"np\") #linear list of events\n",
+    "        self.orig_event = tree[\"event\"].array(library=\"np\") #actual event number\n",
     "        self.file = np.zeros_like(self.event)\n",
-    "        self.mc_id = tree[\"mcId\"].array(library=\"np\")[ridx] #number of mc particles in event\n",
-    "        self.mc_pdg = tree[\"mcPDG\"].array(library=\"np\")[ridx] #pdg code of particles in each event\n",
-    "        self.mc_tier = tree[\"mcTier\"].array(library=\"np\")[ridx] #Which tier each event is folded back to\n",
-    "        self.mc_nhits = tree[\"mcNHits\"].array(library=\"np\")[ridx] #number of mc particles hits in event\n",
-    "        self.mc_momentum = tree[\"mcMomentum\"].array(library=\"np\")[ridx] #momentum of mc particles in event\n",
-    "        is_nu_int = tree[\"isNuInteration\"].array(library=\"np\")[ridx] #not functioning\n",
-    "        is_cr_int = tree[\"isCosmicRay\"].array(library=\"np\")[ridx] #not functioning\n",
-    "        is_tb_int = tree[\"isTestBeam\"].array(library=\"np\")[ridx] #not functioning\n",
+    "        self.mc_id = tree[\"mcId\"].array(library=\"np\") #number of mc particles in event\n",
+    "        self.mc_pdg = tree[\"mcPDG\"].array(library=\"np\") #pdg code of particles in each event\n",
+    "        self.mc_tier = tree[\"mcTier\"].array(library=\"np\") #Which tier each event is folded back to\n",
+    "        self.mc_nhits = tree[\"mcNHits\"].array(library=\"np\") #number of mc particles hits in event\n",
+    "        self.mc_momentum = tree[\"mcMomentum\"].array(library=\"np\") #momentum of mc particles in event\n",
+    "        is_nu_int = tree[\"isNuInteration\"].array(library=\"np\") #not functioning\n",
+    "        is_cr_int = tree[\"isCosmicRay\"].array(library=\"np\") #not functioning\n",
+    "        is_tb_int = tree[\"isTestBeam\"].array(library=\"np\") #not functioning\n",
     "        self.environment = np.full(is_nu_int.shape, \"??\") #not functioning\n",
     "        self.environment[np.where(is_nu_int)] = \"nu\" #not functioning\n",
     "        self.environment[np.where(is_cr_int)] = \"tb\" #not functioning\n",
     "        self.environment[np.where(is_tb_int)] = \"cr\" #not functioning\n",
-    "        self.is_leading_lepton = tree[\"isLeadingLepton\"].array(library=\"np\")[ridx]\n",
-    "        self.is_michel = tree[\"isMichel\"].array(library=\"np\")[ridx]\n",
-    "        self.n_matches = tree[\"nMatches\"].array(library=\"np\")[ridx]\n",
-    "        self.reco_id_list = tree[\"recoIdVector\"].array(library=\"np\")[ridx]\n",
-    "        self.reco_nhits_list = tree[\"nRecoHitsVector\"].array(library=\"np\")[ridx]\n",
-    "        self.shared_nhits_list = tree[\"nSharedHitsVector\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_adc_list = tree[\"purityAdcVector\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_list = tree[\"purityVector\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_list_u = tree[\"purityVectorU\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_list_v = tree[\"purityVectorV\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_list_w = tree[\"purityVectorW\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_adc_list_u = tree[\"purityAdcVectorU\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_adc_list_v = tree[\"purityAdcVectorV\"].array(library=\"np\")[ridx]\n",
-    "        self.purity_adc_list_w = tree[\"purityAdcVectorW\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_list = tree[\"completenessVector\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_adc_list = tree[\"completenessAdcVector\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_list_u = tree[\"completenessVectorU\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_list_v = tree[\"completenessVectorV\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_list_w = tree[\"completenessVectorW\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_adc_list_u = tree[\"completenessAdcVectorU\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_adc_list_v = tree[\"completenessAdcVectorV\"].array(library=\"np\")[ridx]\n",
-    "        self.completeness_adc_list_w = tree[\"completenessAdcVectorW\"].array(library=\"np\")[ridx]\n",
-    "        self.is_cc = tree[\"isCC\"].array(library=\"np\")[ridx]\n",
-    "        self.is_qe = tree[\"isQE\"].array(library=\"np\")[ridx]\n",
-    "        self.is_res = tree[\"isResonant\"].array(library=\"np\")[ridx]\n",
-    "        self.is_dis = tree[\"isDIS\"].array(library=\"np\")[ridx]\n",
-    "        self.is_coh = tree[\"isCoherent\"].array(library=\"np\")[ridx]\n",
-    "        self.is_numu = tree[\"isNuMu\"].array(library=\"np\")[ridx]\n",
-    "        # Typo in first set, this will be fixed in the future\n",
-    "        self.is_nue = tree[\"isNueE\"].array(library=\"np\")[ridx]\n",
-    "        self.n_pizero = tree[\"nPiZero\"].array(library=\"np\")[ridx]\n",
-    "        self.n_pic = tree[\"nPiMinus\"].array(library=\"np\")[ridx] + tree[\"nPiPlus\"].array(library=\"np\")[ridx]\n",
-    "        self.n_photons = tree[\"nPhotons\"].array(library=\"np\")[ridx]\n",
-    "        self.n_protons = tree[\"nProtons\"].array(library=\"np\")[ridx]\n",
+    "        self.is_leading_lepton = tree[\"isLeadingLepton\"].array(library=\"np\")\n",
+    "        self.is_michel = tree[\"isMichel\"].array(library=\"np\")\n",
+    "        self.n_matches = tree[\"nMatches\"].array(library=\"np\")\n",
+    "        self.reco_id_list = tree[\"recoIdVector\"].array(library=\"np\")\n",
+    "        self.reco_nhits_list = tree[\"nRecoHitsVector\"].array(library=\"np\")\n",
+    "        self.shared_nhits_list = tree[\"nSharedHitsVector\"].array(library=\"np\")\n",
+    "        self.purity_adc_list = tree[\"purityAdcVector\"].array(library=\"np\")\n",
+    "        self.purity_list = tree[\"purityVector\"].array(library=\"np\")\n",
+    "        self.purity_list_u = tree[\"purityVectorU\"].array(library=\"np\")\n",
+    "        self.purity_list_v = tree[\"purityVectorV\"].array(library=\"np\")\n",
+    "        self.purity_list_w = tree[\"purityVectorW\"].array(library=\"np\")\n",
+    "        self.purity_adc_list_u = tree[\"purityAdcVectorU\"].array(library=\"np\")\n",
+    "        self.purity_adc_list_v = tree[\"purityAdcVectorV\"].array(library=\"np\")\n",
+    "        self.purity_adc_list_w = tree[\"purityAdcVectorW\"].array(library=\"np\")\n",
+    "        self.completeness_list = tree[\"completenessVector\"].array(library=\"np\")\n",
+    "        self.completeness_adc_list = tree[\"completenessAdcVector\"].array(library=\"np\")\n",
+    "        self.completeness_list_u = tree[\"completenessVectorU\"].array(library=\"np\")\n",
+    "        self.completeness_list_v = tree[\"completenessVectorV\"].array(library=\"np\")\n",
+    "        self.completeness_list_w = tree[\"completenessVectorW\"].array(library=\"np\")\n",
+    "        self.completeness_adc_list_u = tree[\"completenessAdcVectorU\"].array(library=\"np\")\n",
+    "        self.completeness_adc_list_v = tree[\"completenessAdcVectorV\"].array(library=\"np\")\n",
+    "        self.completeness_adc_list_w = tree[\"completenessAdcVectorW\"].array(library=\"np\")\n",
+    "        self.is_cc = tree[\"isCC\"].array(library=\"np\")\n",
+    "        self.is_qe = tree[\"isQE\"].array(library=\"np\")\n",
+    "        self.is_res = tree[\"isResonant\"].array(library=\"np\")\n",
+    "        self.is_dis = tree[\"isDIS\"].array(library=\"np\")\n",
+    "        self.is_coh = tree[\"isCoherent\"].array(library=\"np\")\n",
+    "        self.is_numu = tree[\"isNuMu\"].array(library=\"np\")\n",
+    "        self.is_nue = tree[\"isNuE\"].array(library=\"np\")\n",
+    "        self.n_pizero = tree[\"nPiZero\"].array(library=\"np\")\n",
+    "        self.n_pic = tree[\"nPiMinus\"].array(library=\"np\") + tree[\"nPiPlus\"].array(library=\"np\")\n",
+    "        self.n_photons = tree[\"nPhotons\"].array(library=\"np\")\n",
+    "        self.n_protons = tree[\"nProtons\"].array(library=\"np\")\n",
     "        self.pc_metric = self.purity_adc_list * self.completeness_adc_list\n",
     "        file.close()\n",
     "        make_sequential(self)\n",
@@ -566,48 +560,44 @@
     "class EventValidation:\n",
     "    def __init__(self, filename, treename):\n",
     "        file = uproot.open(filename)\n",
-    "        tree = file[treename]\n",
-    "        \n",
+    "        tree = file[treename]        \n",
     "        events = tree['event'].array(library=\"np\") \n",
-    "        choices = np.random.choice([False, True], len(events))\n",
-    "        ridx = np.where(choices)\n",
-    "        \n",
-    "        self.event = tree['event'].array(library=\"np\")[ridx] #linear list of events\n",
-    "        self.orig_event = tree[\"event\"].array(library=\"np\")[ridx] #actual event number\n",
+    "        self.event = tree['event'].array(library=\"np\") #linear list of events\n",
+    "        self.orig_event = tree[\"event\"].array(library=\"np\") #actual event number\n",
     "        self.file = np.zeros_like(self.event)\n",
-    "        self.is_cc = tree[\"isCC\"].array(library=\"np\")[ridx]\n",
-    "        self.is_qe = tree[\"isQE\"].array(library=\"np\")[ridx]\n",
-    "        self.is_res = tree[\"isResonant\"].array(library=\"np\")[ridx]\n",
-    "        self.is_dis = tree[\"isDIS\"].array(library=\"np\")[ridx]\n",
-    "        self.is_coh = tree[\"isCoherent\"].array(library=\"np\")[ridx]\n",
-    "        self.is_numu = tree[\"isNuMu\"].array(library=\"np\")[ridx]\n",
-    "        self.is_nue = tree[\"isNuE\"].array(library=\"np\")[ridx]\n",
-    "        self.n_pizero = tree[\"nPiZero\"].array(library=\"np\")[ridx]\n",
-    "        self.n_pic = tree[\"nPiMinus\"].array(library=\"np\")[ridx] + tree[\"nPiPlus\"].array(library=\"np\")[ridx]\n",
-    "        self.n_photons = tree[\"nPhotons\"].array(library=\"np\")[ridx]\n",
-    "        self.n_protons = tree[\"nProtons\"].array(library=\"np\")[ridx]\n",
-    "        self.is_fiducial = tree[\"isFiducial\"].array(library=\"np\")[ridx]\n",
-    "        self.nu_vtx_dx = tree[\"vtxDx\"].array(library=\"np\")[ridx]\n",
-    "        self.nu_vtx_dy = tree[\"vtxDy\"].array(library=\"np\")[ridx]\n",
-    "        self.nu_vtx_dz = tree[\"vtxDr\"].array(library=\"np\")[ridx]\n",
-    "        self.nu_vtx_dr = tree[\"vtxDz\"].array(library=\"np\")[ridx]\n",
-    "        self.n_good_matches = tree[\"nGoodMatches\"].array(library=\"np\")[ridx]\n",
-    "        self.n_poor_matches = tree[\"nPoorMatches\"].array(library=\"np\")[ridx]\n",
-    "        self.n_unmatched = tree[\"nUnmatched\"].array(library=\"np\")[ridx]\n",
-    "        self.n_nodes = tree[\"nNodes\"].array(library=\"np\")[ridx]\n",
-    "        self.n_good_tier1_matches = tree[\"nGoodTier1Matches\"].array(library=\"np\")[ridx]\n",
-    "        self.n_tier1_nodes = tree[\"nTier1Nodes\"].array(library=\"np\")[ridx]\n",
-    "        self.n_good_track_matches = tree[\"nGoodTrackMatches\"].array(library=\"np\")[ridx]\n",
-    "        self.n_track_nodes = tree[\"nTrackNodes\"].array(library=\"np\")[ridx]\n",
-    "        self.n_good_shower_matches = tree[\"nGoodShowerMatches\"].array(library=\"np\")[ridx]\n",
-    "        self.n_shower_nodes = tree[\"nShowerNodes\"].array(library=\"np\")[ridx]\n",
-    "        self.n_good_tier1_track_matches = tree[\"nGoodTier1TrackMatches\"].array(library=\"np\")[ridx]\n",
-    "        self.n_track_tier1_nodes = tree[\"nTier1TrackNodes\"].array(library=\"np\")[ridx]\n",
-    "        self.n_good_tier1_shower_matches = tree[\"nGoodTier1ShowerMatches\"].array(library=\"np\")[ridx]\n",
-    "        self.n_tier1_shower_nodes = tree[\"nTier1ShowerNodes\"].array(library=\"np\")[ridx]\n",
-    "        self.has_leading_muon = tree[\"hasLeadingMuon\"].array(library=\"np\")[ridx]\n",
-    "        self.has_leading_electron = tree[\"hasLeadingElectron\"].array(library=\"np\")[ridx]\n",
-    "        self.is_leading_lepton_correct = tree[\"isLeadingLeptonCorrect\"].array(library=\"np\")[ridx]\n",
+    "        self.is_cc = tree[\"isCC\"].array(library=\"np\")\n",
+    "        self.is_qe = tree[\"isQE\"].array(library=\"np\")\n",
+    "        self.is_res = tree[\"isResonant\"].array(library=\"np\")\n",
+    "        self.is_dis = tree[\"isDIS\"].array(library=\"np\")\n",
+    "        self.is_coh = tree[\"isCoherent\"].array(library=\"np\")\n",
+    "        self.is_numu = tree[\"isNuMu\"].array(library=\"np\")\n",
+    "        self.is_nue = tree[\"isNuE\"].array(library=\"np\")\n",
+    "        self.n_pizero = tree[\"nPiZero\"].array(library=\"np\")\n",
+    "        self.n_pic = tree[\"nPiMinus\"].array(library=\"np\") + tree[\"nPiPlus\"].array(library=\"np\")\n",
+    "        self.n_photons = tree[\"nPhotons\"].array(library=\"np\")\n",
+    "        self.n_protons = tree[\"nProtons\"].array(library=\"np\")\n",
+    "        self.is_fiducial = tree[\"isFiducial\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dx = tree[\"vtxDx\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dy = tree[\"vtxDy\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dz = tree[\"vtxDr\"].array(library=\"np\")\n",
+    "        self.nu_vtx_dr = tree[\"vtxDz\"].array(library=\"np\")\n",
+    "        self.n_good_matches = tree[\"nGoodMatches\"].array(library=\"np\")\n",
+    "        self.n_poor_matches = tree[\"nPoorMatches\"].array(library=\"np\")\n",
+    "        self.n_unmatched = tree[\"nUnmatched\"].array(library=\"np\")\n",
+    "        self.n_nodes = tree[\"nNodes\"].array(library=\"np\")\n",
+    "        self.n_good_tier1_matches = tree[\"nGoodTier1Matches\"].array(library=\"np\")\n",
+    "        self.n_tier1_nodes = tree[\"nTier1Nodes\"].array(library=\"np\")\n",
+    "        self.n_good_track_matches = tree[\"nGoodTrackMatches\"].array(library=\"np\")\n",
+    "        self.n_track_nodes = tree[\"nTrackNodes\"].array(library=\"np\")\n",
+    "        self.n_good_shower_matches = tree[\"nGoodShowerMatches\"].array(library=\"np\")\n",
+    "        self.n_shower_nodes = tree[\"nShowerNodes\"].array(library=\"np\")\n",
+    "        self.n_good_tier1_track_matches = tree[\"nGoodTier1TrackMatches\"].array(library=\"np\")\n",
+    "        self.n_track_tier1_nodes = tree[\"nTier1TrackNodes\"].array(library=\"np\")\n",
+    "        self.n_good_tier1_shower_matches = tree[\"nGoodTier1ShowerMatches\"].array(library=\"np\")\n",
+    "        self.n_tier1_shower_nodes = tree[\"nTier1ShowerNodes\"].array(library=\"np\")\n",
+    "        self.has_leading_muon = tree[\"hasLeadingMuon\"].array(library=\"np\")\n",
+    "        self.has_leading_electron = tree[\"hasLeadingElectron\"].array(library=\"np\")\n",
+    "        self.is_leading_lepton_correct = tree[\"isLeadingLeptonCorrect\"].array(library=\"np\")\n",
     "        file.close()\n",
     "        make_sequential(self)"
    ]
