Minor style updates

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -95,8 +95,7 @@
     "        self.is_dis = tree[\"isDIS\"].array(library=\"np\")\n",
     "        self.is_coh = tree[\"isCoherent\"].array(library=\"np\")\n",
     "        self.is_numu = tree[\"isNuMu\"].array(library=\"np\")\n",
-    "        # Typo in first set, this will be fixed in the future\n",
-    "        self.is_nue = tree[\"isNueE\"].array(library=\"np\")\n",
+    "        self.is_nue = tree[\"isNuE\"].array(library=\"np\")\n",
     "        self.n_pizero = tree[\"nPiZero\"].array(library=\"np\")\n",
     "        self.n_pic = tree[\"nPiMinus\"].array(library=\"np\") + tree[\"nPiPlus\"].array(library=\"np\")\n",
     "        self.n_photons = tree[\"nPhotons\"].array(library=\"np\")\n",
@@ -165,7 +164,6 @@
     "        else:\n",
     "            metric.y[i] = -1\n",
     "\n",
-    "    #metric.rebin(bin_width)\n",
     "    metric.suppress_empty()\n",
     "    \n",
     "    return metric\n",
@@ -185,7 +183,6 @@
     "        else:\n",
     "            metric.y[i] = -1\n",
     "\n",
-    "    #metric.rebin(bin_width)\n",
     "    metric.suppress_empty()\n",
     "    \n",
     "    return metric\n",
@@ -222,7 +219,7 @@
     "    if not plot_format.ylim is None:\n",
     "        plt.ylim(plot_format.ylim[0], plot_format.ylim[1])\n",
     "        \n",
-    "    plt.errorbar(x, y, xerr=0.05 / 2, yerr = e, fmt='o', markersize = '2', color='r', elinewidth=0.5)\n",
+    "    plt.errorbar(x, y, xerr=0.05 / 2, yerr = e, fmt='o', markersize = '4', lw=2, elinewidth=2)\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    save_plot(fig, plot_format.filename)\n",
@@ -258,13 +255,14 @@
     "        plt.ylim(plot_format.ylim[0], plot_format.ylim[1])\n",
     "    \n",
     "    if metric.lower() in ['purity', 'completeness']:\n",
-    "        plt.plot(x, y, color='b', label = \"median\")\n",
-    "        plt.plot(x, err[0], color='r', linestyle='dashed', label = \"84.1%\")\n",
-    "        plt.plot(x, err[1], color='r', linestyle='dashed', label = \"15.9%\")\n",
+    "        plt.plot(x, y, label = \"median\", lw=2)\n",
+    "        color = plt.gca().lines[-1].get_color()\n",
+    "        plt.plot(x, err[0], color=color, lw=2, linestyle='dashed', label = \"84.1%\")\n",
+    "        plt.plot(x, err[1], color=color, lw=2, linestyle='dashed', label = \"15.9%\")\n",
     "        plt.legend(fontsize=plot_format.titlesize)\n",
     "    elif metric.lower() == 'efficiency':\n",
     "        bin_width = (x[1] - x[0])\n",
-    "        plt.errorbar(x, y, xerr=bin_width / 2, yerr = err, fmt='o', markersize = '2', color='r', elinewidth=0.5)\n",
+    "        plt.errorbar(x, y, xerr=bin_width / 2, yerr = err, fmt='o', lw=2, markersize = '4', elinewidth=2)\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    save_plot(fig, plot_format.filename)\n",
@@ -384,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation = MCValidation(\"validation.root\", \"mc\")"
+    "validation = MCValidation(\"validation_mc.root\", \"mc\")"
    ]
   },
   {
@@ -398,7 +396,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -423,7 +421,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -456,7 +454,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
