--- a/validation/metrics_plots_compare.ipynb
+++ b/validation/metrics_plots_compare.ipynb
@@ -417,8 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation1 = MCValidation(\"validation.root\", \"mc\")\n",
-    "validation2 = MCValidation(\"validation.root\", \"mc\")"
+    "validation1 = MCValidation(\"validation_mc.root\", \"mc\")\n",
+    "validation2 = MCValidation(\"validation_mc.root\", \"mc\")"
    ]
   },
   {
