Minor style changes

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -595,7 +595,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_format = PlotFormat(title=\"Event Particle Fraction - Inclusive\", xlabel=\"true nodes\", ylabel=\"reconstructed nodes\",\n",
+    "plot_format = PlotFormat(title=\"Feature - Base : Inclusive\", xlabel=\"true nodes\", ylabel=\"reconstructed nodes\",\n",
     "                         filename=f\"inc_particle_frac\")\n",
     "plot_histogram_2d(validation.n_nodes, validation.n_good_matches, plot_format)"
    ]
@@ -638,7 +638,7 @@
     "    type_match = type_target & (validation.is_cc == True)\n",
     "    idx = np.where(type_match)\n",
     "    if len(idx[0]) > 0:\n",
-    "        plot_format = PlotFormat(title=f\"Event Particle Fraction - CC{int_type.upper()}\", xlabel=\"true nodes\",\n",
+    "        plot_format = PlotFormat(title=f\"Feature - Base : CC{int_type.upper()}\", xlabel=\"true nodes\",\n",
     "                                 ylabel=\"reconstructed nodes\", filename=f\"cc{int_type}_particle_frac\")\n",
     "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)\n",
     "\n",
@@ -674,7 +674,7 @@
     "    type_match = type_target & (validation.is_cc == False)\n",
     "    idx = np.where(type_match)\n",
     "    if len(idx[0]) > 0:\n",
-    "        plot_format = PlotFormat(title=f\"Event Particle Fraction - NC{int_type.upper()}\", xlabel=\"true nodes\", ylabel=\"reconstructed nodes\",\n",
+    "        plot_format = PlotFormat(title=f\"Feature - Base : NC{int_type.upper()}\", xlabel=\"true nodes\", ylabel=\"reconstructed nodes\",\n",
     "                                 filename=f\"nc{int_type}_particle_frac\")\n",
     "        plot_histogram_2d(validation.n_nodes[idx], validation.n_good_matches[idx], plot_format)\n",
     "        \n",
