Fix fractional error bug

--- a/validation/metrics_plots.ipynb
+++ b/validation/metrics_plots.ipynb
@@ -204,7 +204,7 @@
     "    \n",
     "    y = y[idx]\n",
     "    x = x[idx]\n",
-    "    e = e[idx]\n",
+    "    e = e[idx] * y\n",
     "    \n",
     "    plt.rcParams[\"figure.figsize\"] = (20, 15)\n",
     "    fig, ax = plt.subplots()\n",
