--- a/validation/metrics_plots_compare.ipynb
+++ b/validation/metrics_plots_compare.ipynb
@@ -52,6 +52,7 @@
     "    def __init__(self, filename, treename):\n",
     "        file = uproot.open(filename)\n",
     "        tree = file[treename]\n",
+    "        \n",
     "        self.event = tree['event'].array(library=\"np\") #linear list of events\n",
     "        self.orig_event = tree[\"event\"].array(library=\"np\") #actual event number\n",
     "        self.file = np.zeros_like(self.event)\n",
@@ -224,7 +225,7 @@
     "\n",
     "        y = y[idx]\n",
     "        x = x[idx]\n",
-    "        e = e[idx]\n",
+    "        e = e[idx] * y\n",
     "    \n",
     "        plt.errorbar(x, y, xerr=0.05 / 2, yerr = e, fmt='o', lw=2, markersize = '4', elinewidth=2, label=f\"{key}\")\n",
     "    plt.legend(fontsize=plot_format.titlesize)\n",
@@ -417,8 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation1 = MCValidation(\"validation_mc.root\", \"mc\")\n",
-    "validation2 = MCValidation(\"validation_mc.root\", \"mc\")"
+    "validation1 = MCValidation(\"validation_mc1.root\", \"mc\")\n",
+    "validation2 = MCValidation(\"validation_mc2.root\", \"mc\")"
    ]
   },
   {
@@ -561,7 +562,8 @@
     "    def __init__(self, filename, treename):\n",
     "        file = uproot.open(filename)\n",
     "        tree = file[treename]        \n",
-    "        events = tree['event'].array(library=\"np\") \n",
+    "        \n",
+    "        events = tree['event'].array(library=\"np\")\n",
     "        self.event = tree['event'].array(library=\"np\") #linear list of events\n",
     "        self.orig_event = tree[\"event\"].array(library=\"np\") #actual event number\n",
     "        self.file = np.zeros_like(self.event)\n",
@@ -608,8 +610,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation1 = EventValidation(\"validation_event.root\", \"event\")\n",
-    "validation2 = EventValidation(\"validation_event.root\", \"event\")"
+    "validation1 = EventValidation(\"validation_event1.root\", \"event\")\n",
+    "validation2 = EventValidation(\"validation_event2.root\", \"event\")"
    ]
   },
   {
